@@ -1,3 +1,8 @@
+2003-02-28  Kevin Kenny  <kennykb@users.sourceforge.net>
+
+	* tkchat.tcl: Added '-force' to a 'namespace import' call
+	so that script reloading works again.
+	
 2003-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl (::tkchat::Init): Fix mishandling of the http_proxy
